Fix one card view
One card view was too large so the max size was reduced

--- a/src/components/Shop/Shop.module.css
+++ b/src/components/Shop/Shop.module.css
@@ -68,7 +68,7 @@
 }
 
 .cardWrapper>div {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, .5fr));
     display: grid;
     justify-content: space-around;
     gap: 16px;
